--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<title>HotJar test</title>
+	<title>HotJar test!</title>
 	<!-- Hotjar Tracking Code for https://asterite.github.io/ -->
 	<script>
 	    (function(h,o,t,j,a,r){
