--- a/index.html
+++ b/index.html
@@ -14,11 +14,9 @@
 	</script>
 </head>
 <body>
-	<div>
-Hello!
-</div>
-<div>
-<button>Click</button>
-</div>
+	<div>Hello!</div>
+	<div><button>Click</button></div>
+	<div>Bye!</div>
+	<div><button>Click 2</button></div>
 </body>
 </html>
