--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<title>HotJar test!</title>
+	<title>HotJar test</title>
 	<!-- Hotjar Tracking Code for https://asterite.github.io/hotjar_test/ -->
 	<script>
 	    (function(h,o,t,j,a,r){
@@ -14,9 +14,8 @@
 	</script>
 </head>
 <body>
-	<div>Hello!</div>
-	<div><button>Click</button></div>
-	<div>Bye!</div>
-	<div><button>Click 2</button></div>
+	<div>This is just a very basic demo site to try out HotJar</div>
+	<div><button>This is a test button</button></div>
+	<div><button>This is another test button</button></div>
 </body>
 </html>
